--- a/ashtechtrade.html
+++ b/ashtechtrade.html
@@ -140,7 +140,7 @@ other{background-color: white;
 				<div class="button"><a href="#" class="button_link">Explore</a></div>
 			</div>
 	
-			<img src="C:\Users\User\Pictures\ashtech.PNG" class="pic" alt="">
+			<img src="ashtech.PNG" class="pic" alt="">
 	
 		</div>
 		
