--- a/Login.html
+++ b/Login.html
@@ -37,7 +37,7 @@
 <input type="text" name="Order address" placeholder="&nbsp;&nbsp;&nbsp;&nbsp;Password"/ required><br/>
 
 <button type="submit">Continue</button><br/> 
-<a href="" style="border: 5px inset blue; font-size: 20px;">dont have an account click here</a>
+<a href="https://lancebank200.github.io/ashtech/signup.html" style="border: 5px inset blue; font-size: 20px;">dont have an account click here</a>
  
 </center>
   </body>
