--- a/ashtechtrade.html
+++ b/ashtechtrade.html
@@ -128,7 +128,7 @@ other{background-color: white;
 					
 					<ul>
 						<li><a href="#">Home</a></li>
-						<li><a href="https://lancebank200.github.io/ashtech/signup.html">Explore</a></li>
+						<li><a href="https://lancebank200.github.io/ashtech/Login.html">Explore</a></li>
 						<li><a href="https://lancebank200.github.io/ashtech/signup.html">Signup</a></li>
 						<li><a href="https://wa.me/+17734821321">Whatsapp</a></li>
 					</ul>					
